--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_POLICY_ID=6d20257162cf10c1fa168e7e9149d3e9e0ba72cba091979d0cdb62a0
+REACT_APP_POLICY_ID=0d832a143bd7a5e0d315af25c3879707a2ffd089dad0d370ec4977a2
+REACT_APP_BACKEND_URL=https://cardano-cheese-backend.herokuapp.com
