--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_POLICY_ID=0d832a143bd7a5e0d315af25c3879707a2ffd089dad0d370ec4977a2
-REACT_APP_BACKEND_URL=http://localhost:3001
+REACT_APP_BACKEND_URL=https://cardano-cheese-backend.herokuapp.com
